fix arrow image distortion

--- a/client/src/components/instruction.css
+++ b/client/src/components/instruction.css
@@ -11,6 +11,8 @@
     width: 100%;
     max-width: 100px;
     margin: 10px 0 20px 0;
+    height: 100%;
+    max-height: 100px;
 }
 .instruction-highlight {
     font-weight: 700;
@@ -85,7 +87,7 @@
         width: 200px;
     }
     .instruction-wrapper img {
-        width: 100%;
+        max-height: 20px;
         max-width: 20px;
         margin: 5px 0 10px 0;
     }
